--- a/python/index.html
+++ b/python/index.html
@@ -15,23 +15,23 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./control-flow/" role="button">Control Flow</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./1-data-types/" role="button">1 Data Types</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./modules-and-packages/" role="button">Modules And Packages</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./2-operators/" role="button">2 Operators</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./file-handling/" role="button">File Handling</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./3-control-flow/" role="button">3 Control Flow</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./object-oriented-programming/" role="button">Object Oriented Programming</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./4-functions/" role="button">4 Functions</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./operators/" role="button">Operators</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./5-exception-handling/" role="button">5 Exception Handling</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./exception-handling/" role="button">Exception Handling</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./6-object-oriented-programming/" role="button">6 Object Oriented Programming</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./miscellaneous/" role="button">Miscellaneous</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./7-modules-and-packages/" role="button">7 Modules And Packages</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./functions/" role="button">Functions</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./8-file-handling/" role="button">8 File Handling</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./data-types/" role="button">Data Types</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./9-miscellaneous/" role="button">9 Miscellaneous</a>
 
 
       </div>
