--- a/python/1-data-types/index.html
+++ b/python/1-data-types/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards - Python - Exception-Handling</title>
+  <title>Programming Syntax Flashcards - Python - 1-Data-Types</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -27,20 +27,22 @@
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Basic try-except</h1>
-<p>The try statement in Python is used to handle exceptions, allowing you to catch and respond to errors that occur during the execution of a program. It works with except, else, and finally blocks to provide a robust error-handling mechanism.</p>
+                                        <h1>Numbers</h1>
+<p>Python has three types of numbers:</p>
+<ul>
+<li>int</li>
+<li>float</li>
+<li>complex</li>
+</ul>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python">try:
-    result = 10 / 0
-except ZeroDivisionError:
-    print(&quot;Cannot divide by zero!&quot;)
-
-# Output: Cannot divide by zero!
+                                        <pre><code class="language-python">x = 1    # int
+y = 2.8  # float
+z = 1j   # complex
 </code></pre>
                                     </div>
                                 </div>
@@ -55,21 +57,15 @@ except ZeroDivisionError:
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Try-except with Multiple Exceptions</h1>
+                                        <h1>Dictionaries</h1>
+<p>A Python dictionary is a collection of key-value pairs, where each key is unique and maps to a value. It allows for fast retrieval, insertion, and deletion of data based on keys, making it a versatile and efficient data structure for various programming tasks.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python">try:
-    result = int(&quot;abc&quot;)
-except ValueError:
-    print(&quot;Invalid input! Cannot convert to integer.&quot;)
-except ZeroDivisionError:
-    print(&quot;Cannot divide by zero!&quot;)
-
-# Output: Invalid input! Cannot convert to integer.
+                                        <pre><code class="language-python">person = {&quot;name&quot;: &quot;Bob&quot;, &quot;age&quot;: 30}
 </code></pre>
                                     </div>
                                 </div>
@@ -84,22 +80,15 @@ except ZeroDivisionError:
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Try Except Else</h1>
-<p>The <code>else</code> block is executed if the code block inside the <code>try</code> block does not raise any exceptions.</p>
+                                        <h1>Lists</h1>
+<p>A Python list is an ordered collection of items, which can be of any data type. Lists are mutable, allowing for the addition, removal, and modification of elements. They provide a flexible way to store and manage sequences of data.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python">try:
-    result = 10 / 2
-except ZeroDivisionError:
-    print(&quot;Cannot divide by zero!&quot;)
-else:
-    print(&quot;Division successful:&quot;, result)
-
-# Output: Division successful: 5.0
+                                        <pre><code class="language-python">fruits = [&quot;apple&quot;, &quot;banana&quot;, &quot;cherry&quot;]
 </code></pre>
                                     </div>
                                 </div>
@@ -114,26 +103,15 @@ else:
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Try Except Finally</h1>
-<p>The <code>finally</code> block is executed after the <code>try</code> block and any <code>except</code> block.</p>
+                                        <h1>Sets</h1>
+<p>A Python set is an unordered collection of unique elements. Sets are mutable and do not allow duplicate values, making them useful for storing distinct items and performing operations like union, intersection, and difference. They provide efficient membership testing and are commonly used for tasks involving distinct data elements.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python">try:
-    file = open(&quot;example.txt&quot;, &quot;r&quot;)
-    content = file.read()
-except FileNotFoundError:
-    print(&quot;File not found!&quot;)
-finally:
-    if 'file' in locals() and not file.closed:
-        file.close()
-    print(&quot;File operation complete.&quot;)
-
-# Output (if file does not exist): File not found!
-# Output (always): File operation complete.
+                                        <pre><code class="language-python">unique_numbers = {1, 2, 3}
 </code></pre>
                                     </div>
                                 </div>
@@ -148,25 +126,40 @@ finally:
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Try Except Else Finally</h1>
-<p>The <code>else</code> block is executed if the code block inside the <code>try</code> block does not raise any exceptions. The <code>finally</code> block is executed after the <code>try</code> block and any <code>except</code> block.</p>
+                                        <h1>Strings</h1>
+<p>A Python string is an immutable sequence of characters used to represent text. Strings support a wide range of operations, such as concatenation, slicing, and various methods for manipulating and querying text data. Strings are enclosed in either single, double, or triple quotes.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python">try:
-    result = 10 / 2
-except ZeroDivisionError:
-    print(&quot;Cannot divide by zero!&quot;)
-else:
-    print(&quot;Division successful:&quot;, result)
-finally:
-    print(&quot;End of try-except block.&quot;)
-
-# Output: Division successful: 5.0
-# Output: End of try-except block.
+                                        <pre><code class="language-python">double_quotes = &quot;Hello World&quot;
+single_quotes = 'Hello World'
+triple_quotes = &quot;&quot;&quot;Hello World&quot;&quot;&quot;
+</code></pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="carousel-item">
+                    <div class="flip-card m-3">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <div class="card h-100 text-bg-dark border-light">
+                                    <div class="card-body">
+                                        <h1>Tuples</h1>
+<p>A Python tuple is an immutable ordered collection of elements, which can be of any data type.Tuples are useful for storing fixed collections of items and can be indexed and sliced similarly to lists. Tuples are defined by enclosing elements in parentheses.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card-back">
+                                <div class="card h-100 text-bg-dark border-light">
+                                    <div class="card-body">
+                                        <pre><code class="language-python">coordinates = (10.0, 20.0)
 </code></pre>
                                     </div>
                                 </div>
