--- a/python/7-modules-and-packages/index.html
+++ b/python/7-modules-and-packages/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards - Python - Functions</title>
+  <title>Programming Syntax Flashcards - Python - 7-Modules-And-Packages</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -27,43 +27,20 @@
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Lambdas</h1>
-<p>The lambda statement in Python is used to create small anonymous functions, also known as lambda functions. These functions can have any number of arguments but only one expression. They are often used for short, simple operations and can be defined in a single line.</p>
+                                        <h1>Basic Import</h1>
+<p>The <code>import</code> statement in Python is used to include the definitions (functions, classes, variables) from a module into the current namespace. This allows you to use functions and classes defined in other files or modules.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python"># Basic lambda function
-# Define a lambda function to add two numbers
-add = lambda a, b: a + b
+                                        <pre><code class="language-python"># Import the entire math module
+import math
 
-# Call the lambda function
-result = add(5, 3)
-print(result)  # Output: 8
-
-# Lambda function with no parameters
-# Define a lambda function that takes no parameters
-say_hello = lambda: &quot;Hello, world!&quot;
-
-# Call the lambda function
-print(say_hello())  # Output: Hello, world!
-
-# Using lambda function inside another function
-def apply_operation(x, y, operation):
-    return operation(x, y)
-
-# Call the function with a lambda function as an argument
-result = apply_operation(5, 3, lambda a, b: a * b)
-print(result)  # Output: 15
-
-# Lambda function with a single parameter
-# Define a lambda function to square a number
-square = lambda x: x ** 2
-
-# Call the lambda function
-print(square(4))  # Output: 16
+# Use a function from the math module
+result = math.sqrt(16)
+print(result)  # Output: 4.0
 </code></pre>
                                     </div>
                                 </div>
@@ -78,22 +55,20 @@ print(square(4))  # Output: 16
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Default Parameters</h1>
+                                        <h1>Import With Alias</h1>
+<p>The <code>import</code> statement in Python allows you to import a module with an alias. This is useful when you want to refer to a module with a different name in your code.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python"># Define a function with a default parameter
-def greet(name=&quot;Guest&quot;):
-    print(f&quot;Hello, {name}!&quot;)
+                                        <pre><code class="language-python"># Import the math module with an alias
+import math as m
 
-# Call the function without providing a parameter
-greet()           # Output: Hello, Guest!
-
-# Call the function with a parameter
-greet(&quot;Alice&quot;)    # Output: Hello, Alice!
+# Use a function from the math module using the alias
+result = m.sqrt(16)
+print(result)  # Output: 4.0
 </code></pre>
                                     </div>
                                 </div>
@@ -108,20 +83,23 @@ greet(&quot;Alice&quot;)    # Output: Hello, Alice!
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Function Definition</h1>
-<p>The <code>def</code> statement in Python is used to define a function.</p>
+                                        <h1>Import Specific Functions or Classes</h1>
+<p>In Python, you can import specific functions or classes from a module instead of importing the entire module.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python"># Define a function
-def greet(name):
-    print(f&quot;Hello, {name}!&quot;)
+                                        <pre><code class="language-python"># Import specific functions from the math module
+from math import sqrt, pi
 
-# Call the function
-greet(&quot;Alice&quot;)  # Output: Hello, Alice!
+# Use the imported functions directly
+result = sqrt(16)
+print(result)  # Output: 4.0
+
+# Access the imported constant
+print(pi)  # Output: 3.141592653589793
 </code></pre>
                                     </div>
                                 </div>
@@ -136,67 +114,23 @@ greet(&quot;Alice&quot;)  # Output: Hello, Alice!
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h1>Parameters And Return Values</h1>
+                                        <h1>Import All Definitions From a Module</h1>
+<p>In Python, you can import all definitions (functions, classes, variables) from a module using the <code>*</code> operator. This allows you to use all the definitions from the module without having to prefix them with the module name.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <pre><code class="language-python"># Define a function with parameters and a return value
-def add(a, b):
-    return a + b
+                                        <pre><code class="language-python"># Import all functions and variables from the math module
+from math import *
 
-# Call the function and print the result
-result = add(5, 3)  # result is 8
-print(result)       # Output: 8
-</code></pre>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="carousel-item">
-                    <div class="flip-card m-3">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
-                                        <h1>Return Statement</h1>
-<p>The <code>return</code> statement in Python is used to exit a function and optionally pass a value back to the caller. It is used to return the result of a function's execution.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flip-card-back">
-                                <div class="card h-100 text-bg-dark border-light">
-                                    <div class="card-body">
-                                        <pre><code class="language-python"># Returning a value from a function
-def add(a, b):
-    return a + b
+# Use the imported functions directly
+result = sqrt(16)
+print(result)  # Output: 4.0
 
-# Call the function and store the result
-result = add(5, 3)
-print(result)  # Output: 8
-
-# Returning multiple values from a function
-def get_coordinates():
-    x = 10
-    y = 20
-    return x, y
-
-# Call the function and unpack the returned tuple
-x_coord, y_coord = get_coordinates()
-print(x_coord, y_coord)  # Output: 10 20
-
-# Returning nothing from a function
-def greet(name):
-    print(f&quot;Hello, {name}!&quot;)
-    return
-
-# Call the function
-greet(&quot;Alice&quot;)  # Output: Hello, Alice!
+# Access the imported constant
+print(pi)  # Output: 3.141592653589793
 </code></pre>
                                     </div>
                                 </div>
