--- a/c/index.html
+++ b/c/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards</title>
+  <title>Programming Syntax Flashcards - C</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,9 +15,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./c/" role="button">C</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./python/" role="button">Python</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./1-types-and-declarations/" role="button">1 Types And Declarations</a>
 
 
       </div>
