C char type content

--- a/c/1-types-and-declarations/index.html
+++ b/c/1-types-and-declarations/index.html
@@ -17,6 +17,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-declarations/" role="button">1 Declarations</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2-character-type/" role="button">2 Character Type</a>
+
 
       </div>
     </div>
