C integer type content

--- a/c/1-types-and-declarations/index.html
+++ b/c/1-types-and-declarations/index.html
@@ -19,6 +19,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./2-character-type/" role="button">2 Character Type</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./3-integer-type/" role="button">3 Integer Type</a>
+
 
       </div>
     </div>
