--- a/c/1-types-and-declarations/index.html
+++ b/c/1-types-and-declarations/index.html
@@ -21,6 +21,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./3-integer-type/" role="button">3 Integer Type</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./4-floating-point-type/" role="button">4 Floating Point Type</a>
+
 
       </div>
     </div>
