C assignment operator content

--- a/c/index.html
+++ b/c/index.html
@@ -17,6 +17,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-types-and-declarations/" role="button">1 Types And Declarations</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2-operators/" role="button">2 Operators</a>
+
 
       </div>
     </div>
