--- a/c/2-operators/1-arithmetic-operators/index.html
+++ b/c/2-operators/1-arithmetic-operators/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards - 2-Operators - 1-Arithmetic-Operators</title>
+  <title>Programming Syntax Flashcards - C - 2-Operators - 1-Arithmetic-Operators</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
