C relational operators content

--- a/c/2-operators/index.html
+++ b/c/2-operators/index.html
@@ -19,6 +19,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./2-assignment-operator/" role="button">2 Assignment Operator</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./3-relational-operators/" role="button">3 Relational Operators</a>
+
 
       </div>
     </div>
