--- a/git/index.html
+++ b/git/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Programming Syntax Flashcards</title>
+  <title>Programming Syntax Flashcards - Git</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -13,15 +13,9 @@
   <div class="d-flex flex-column min-vh-100 min-vw-100">
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-12 mx-auto">
+        
 
-
-        <a class="btn btn-outline-light ms-3 me-3" href="./c/" role="button">C</a>
-
-        <a class="btn btn-outline-light ms-3 me-3" href="./git/" role="button">Git</a>
-
-        <a class="btn btn-outline-light ms-3 me-3" href="./linux/" role="button">Linux</a>
-
-        <a class="btn btn-outline-light ms-3 me-3" href="./python/" role="button">Python</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./1-introduction/" role="button">1 Introduction</a>
 
 
       </div>
