--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./c/" role="button">C</a>
+<!-- <a class="btn btn-outline-light ms-3 me-3" href="./c/" role="button">C</a> -->
 
 <a class="btn btn-outline-light ms-3 me-3" href="./git/" role="button">Git</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./linux/" role="button">Linux</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./python/" role="button">Python</a>
+<!-- <a class="btn btn-outline-light ms-3 me-3" href="./python/" role="button">Python</a> -->
 
 <a class="btn btn-outline-light ms-3 me-3" href="./rust/" role="button">Rust</a>
 
