--- a/rust/1-common-concepts/index.html
+++ b/rust/1-common-concepts/index.html
@@ -15,7 +15,15 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./1-comments/" role="button">1 Comments</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./1-variables/" role="button">1 Variables</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./2-data-types/" role="button">2 Data Types</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./3-functions/" role="button">3 Functions</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./4-comments/" role="button">4 Comments</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./5-control-flow/" role="button">5 Control Flow</a>
 
 
       </div>
