--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <title>Programming Syntax Flashcards</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,6 +15,7 @@
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <div class="d-grid gap-2 col-12 mx-auto">
         
+<a class="btn btn-outline-light ms-3 me-3" href="./digital-literacy/" role="button">Digital Literacy</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./git/" role="button">Git</a>
 
