--- a/rust/2-ownership/index.html
+++ b/rust/2-ownership/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-what-is-ownership/" role="button">1 What Is Ownership</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2-references-and-borrowing/" role="button">2 References And Borrowing</a>
+
 
       </div>
     </div>
