--- a/git/index.html
+++ b/git/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-introduction/" role="button">1 Introduction</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2-foundation-concepts/" role="button">2 Foundation Concepts</a>
+
 
       </div>
     </div>
