--- a/rust/1-common-concepts/1-variables/index.html
+++ b/rust/1-common-concepts/1-variables/index.html
@@ -105,9 +105,9 @@ x = 6; // Error: cannot assign twice to immutable variable
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <p>Use the <code>const</code> keyword with a type annotation:
-```rust
-const THREE_HOURS_IN_SECONDS: u32 = 60 * 60 * 3;</p>
+                                        <p>Use the <code>const</code> keyword with a type annotation:</p>
+<pre><code class="language-rust">const THREE_HOURS_IN_SECONDS: u32 = 60 * 60 * 3;
+</code></pre>
                                     </div>
                                 </div>
                             </div>
@@ -244,9 +244,7 @@ spaces = spaces.len(); // Error: mismatched types
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <p>10-immutable-by-default-reason.md
-```markdown</p>
-<h1>Immutable by Default Reason</h1>
+                                        <h1>Immutable by Default Reason</h1>
 <p>Why does Rust make variables immutable by default?</p>
                                     </div>
                                 </div>
