--- a/rust/2-ownership/index.html
+++ b/rust/2-ownership/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./2-references-and-borrowing/" role="button">2 References And Borrowing</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./3-slice-type/" role="button">3 Slice Type</a>
+
 
       </div>
     </div>
