--- a/digital-literacy/2-hardware/index.html
+++ b/digital-literacy/2-hardware/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-overview/" role="button">1 Overview</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2_peripheral_and_external_devices/" role="button">2_Peripheral_And_External_Devices</a>
+
 
       </div>
     </div>
