--- a/rust/index.html
+++ b/rust/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./2-ownership/" role="button">2 Ownership</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./3-structs/" role="button">3 Structs</a>
+
 
       </div>
     </div>
