--- a/rust/3-structs/index.html
+++ b/rust/3-structs/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Programming Syntax Flashcards - Digital-Literacy</title>
+  <title>Programming Syntax Flashcards - Rust - 3-Structs</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,11 +16,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./1-keyboarding/" role="button">1 Keyboarding</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./2-hardware/" role="button">2 Hardware</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./3-motherboard/" role="button">3 Motherboard</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./1-defining-and-instantiating-structs/" role="button">1 Defining And Instantiating Structs</a>
 
 
       </div>
