--- a/rust/3-structs/index.html
+++ b/rust/3-structs/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-defining-and-instantiating-structs/" role="button">1 Defining And Instantiating Structs</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2-method-syntax/" role="button">2 Method Syntax</a>
+
 
       </div>
     </div>
