--- a/rust/1-common-programming-concepts/index.html
+++ b/rust/1-common-programming-concepts/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-variables-and-mutability/" role="button">1 Variables And Mutability</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./2_data_types/" role="button">2_Data_Types</a>
+
 
       </div>
     </div>
