--- a/rust/1-common-programming-concepts/index.html
+++ b/rust/1-common-programming-concepts/index.html
@@ -18,7 +18,9 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./1-variables-and-mutability/" role="button">1 Variables And Mutability</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./2_data_types/" role="button">2_Data_Types</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./2-data-types/" role="button">2 Data Types</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./3-functions/" role="button">3 Functions</a>
 
 
       </div>
