--- a/rust/1-common-programming-concepts/3-functions/index.html
+++ b/rust/1-common-programming-concepts/3-functions/index.html
@@ -469,7 +469,7 @@ fn try_open() -&gt; io::Result&lt;File&gt; {
                             <div class="flip-card-front">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <h2>Accepting Both String and \&amp;str</h2>
+                                        <h2>Accepting Both String and &amp;str</h2>
 <p>How can you write a function that accepts both <code>String</code> and <code>&amp;str</code>?</p>
                                     </div>
                                 </div>
