--- a/git/1-foundations/1-introduction/index.html
+++ b/git/1-foundations/1-introduction/index.html
@@ -175,11 +175,10 @@ It allows sharing, syncing, and collaborating across different machines.</p>
                             <div class="flip-card-back">
                                 <div class="card h-100 text-bg-dark border-light">
                                     <div class="card-body">
-                                        <p>Use global configuration commands:
-```bash
-git config --global user.name "<your name>"
-git config --global user.email "<your email>"
-````</p>
+                                        <p>Use global configuration commands:</p>
+<pre><code class="language-bash">git config --global user.name &quot;&lt;your name&gt;&quot;
+git config --global user.email &quot;&lt;your email&gt;&quot;
+</code></pre>
 <p>These values are recorded in every commit you make.</p>
                                     </div>
                                 </div>
