--- a/rust/1-common-programming-concepts/index.html
+++ b/rust/1-common-programming-concepts/index.html
@@ -22,6 +22,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./3-functions/" role="button">3 Functions</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./4-comments/" role="button">4 Comments</a>
+
 
       </div>
     </div>
