--- a/rust/index.html
+++ b/rust/index.html
@@ -22,6 +22,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./3-structs/" role="button">3 Structs</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./4-enums-and-pattern-matching/" role="button">4 Enums And Pattern Matching</a>
+
 
       </div>
     </div>
