--- a/rust/1-foundations/index.html
+++ b/rust/1-foundations/index.html
@@ -16,6 +16,8 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03-project-structure/" role="button">03 Project Structure</a>
+
 <a class="btn btn-outline-light ms-3 me-3" href="./1-purpose-and-design-philosophy/" role="button">1 Purpose And Design Philosophy</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./2-toolchain/" role="button">2 Toolchain</a>
