--- a/rust/02_programming_fundamentals/index.html
+++ b/rust/02_programming_fundamentals/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01_variables_mutability_and_shadowing/" role="button">01 Variables Mutability And Shadowing</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02_scalar_types/" role="button">02 Scalar Types</a>
+
 
       </div>
     </div>
