--- a/git/01_foundations/index.html
+++ b/git/01_foundations/index.html
@@ -16,9 +16,11 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_introduction/" role="button">01 Introduction</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01_git_basics/" role="button">01 Git Basics</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02_install_and_configure_git/" role="button">02 Install And Configure Git</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02_git_vs_github/" role="button">02 Git Vs Github</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03_install_and_configure_git/" role="button">03 Install And Configure Git</a>
 
 
       </div>
