--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./cybersecurity/" role="button">Cybersecurity</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./dsa/" role="button">Dsa</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./dsa/" role="button">DSA</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./git/" role="button">Git</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./network/" role="button">Network</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./rust/" role="button">Rust</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./sql/" role="button">SQL</a>
 
 
       </div>
