--- a/network/01_network_client_fundamentals/01_manage_windows_computers/index.html
+++ b/network/01_network_client_fundamentals/01_manage_windows_computers/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Network - 01_Network_Client_Fundamentals - 01_Manage_Windows_Computers</title>
+  <title>Flashcards - Network - 01 Network Client Fundamentals - 01 Manage Windows Computers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
