--- a/rust/02_programming_fundamentals/02_scalar_types/index.html
+++ b/rust/02_programming_fundamentals/02_scalar_types/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 02_Programming_Fundamentals - 02_Scalar_Types</title>
+  <title>Flashcards - Rust - 02 Programming Fundamentals - 02 Scalar Types</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
