--- a/rust/02_programming_fundamentals/index.html
+++ b/rust/02_programming_fundamentals/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 02_Programming_Fundamentals</title>
+  <title>Flashcards - Rust - 02 Programming Fundamentals</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -19,6 +19,8 @@
 <a class="btn btn-outline-light ms-3 me-3" href="./01_variables_mutability_and_shadowing/" role="button">01 Variables Mutability And Shadowing</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02_scalar_types/" role="button">02 Scalar Types</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03_compound_types/" role="button">03 Compound Types</a>
 
 
       </div>
