--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./cybersecurity/" role="button">Cybersecurity</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./data/" role="button">Data</a>
+
 <a class="btn btn-outline-light ms-3 me-3" href="./dsa/" role="button">DSA</a>
 
 <a class="btn btn-outline-light ms-3 me-3" href="./git/" role="button">Git</a>
