--- a/data/01_database_concepts/index.html
+++ b/data/01_database_concepts/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 02 Programming Fundamentals</title>
+  <title>Flashcards - Data - 01 Database Concepts</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,17 +16,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_variables_mutability_and_shadowing/" role="button">01 Variables Mutability And Shadowing</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./02_scalar_types/" role="button">02 Scalar Types</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./03_compound_types/" role="button">03 Compound Types</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04_functions/" role="button">04 Functions</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./05_control_flow/" role="button">05 Control Flow</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./06_comments_and_basic_documentation/" role="button">06 Comments And Basic Documentation</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01_data_structures/" role="button">01 Data Structures</a>
 
 
       </div>
