--- a/rust/index.html
+++ b/rust/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02_programming_fundamentals/" role="button">02 Programming Fundamentals</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03_ownership_and_memory/" role="button">03 Ownership And Memory</a>
+
 
       </div>
     </div>
