--- a/git/02_local_basics/index.html
+++ b/git/02_local_basics/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02_stage_and_commit_changes/" role="button">02 Stage And Commit Changes</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03_status_and_history/" role="button">03 Status And History</a>
+
 
       </div>
     </div>
