--- a/rust/03_ownership_and_memory/index.html
+++ b/rust/03_ownership_and_memory/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02_copy_vs_move_semantics/" role="button">02 Copy Vs Move Semantics</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03_drop/" role="button">03 Drop</a>
+
 
       </div>
     </div>
