--- a/rust/03_ownership_and_memory/index.html
+++ b/rust/03_ownership_and_memory/index.html
@@ -22,6 +22,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./03_drop/" role="button">03 Drop</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./04_borrowing_basics/" role="button">04 Borrowing Basics</a>
+
 
       </div>
     </div>
