--- a/git/03_branching/index.html
+++ b/git/03_branching/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Git</title>
+  <title>Flashcards - Git - 03 Branching</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,11 +16,11 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_foundations/" role="button">01 Foundations</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01_create_and_switch/" role="button">01 Create And Switch</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02_local_basics/" role="button">02 Local Basics</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02_detached_head_state/" role="button">02 Detached Head State</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./03_branching/" role="button">03 Branching</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./03_merging/" role="button">03 Merging</a>
 
 
       </div>
