--- a/rust/04_practical_programming/02_collections/index.html
+++ b/rust/04_practical_programming/02_collections/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02_hashmaps/" role="button">02 Hashmaps</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03_iterators/" role="button">03 Iterators</a>
+
 
       </div>
     </div>
