--- a/rust/04_practical_programming/03_structuring_data/index.html
+++ b/rust/04_practical_programming/03_structuring_data/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 04 Practical Programming</title>
+  <title>Flashcards - Rust - 04 Practical Programming - 03 Structuring Data</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,11 +16,13 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_strings/" role="button">01 Strings</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01_structs/" role="button">01 Structs</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02_collections/" role="button">02 Collections</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02_methods_and_associated_functions/" role="button">02 Methods And Associated Functions</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./03_structuring_data/" role="button">03 Structuring Data</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./03_enums/" role="button">03 Enums</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./04_pattern_matching/" role="button">04 Pattern Matching</a>
 
 
       </div>
