--- a/rust/04_practical_programming/04_error_handling/index.html
+++ b/rust/04_practical_programming/04_error_handling/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 04 Practical Programming</title>
+  <title>Flashcards - Rust - 04 Practical Programming - 04 Error Handling</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,13 +16,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_strings/" role="button">01 Strings</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./02_collections/" role="button">02 Collections</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./03_structuring_data/" role="button">03 Structuring Data</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04_error_handling/" role="button">04 Error Handling</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01_option_type/" role="button">01 Option Type</a>
 
 
       </div>
