--- a/sql/03_relationships/index.html
+++ b/sql/03_relationships/index.html
@@ -18,7 +18,7 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01_keys_and_relationships/" role="button">01 Keys And Relationships</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02_join_concepts/" role="button">02 Join Concepts</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02_joins/" role="button">02 Joins</a>
 
 
       </div>
