--- a/rust/05_code_organization/index.html
+++ b/rust/05_code_organization/index.html
@@ -18,6 +18,14 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01_packages_crates_and_module_tree/" role="button">01 Packages Crates And Module Tree</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02_modules_and_visibility/" role="button">02 Modules And Visibility</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03-separating-code-into-files/" role="button">03-Separating-Code-Into-Files</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./04-use-statement-and-paths/" role="button">04-Use-Statement-And-Paths</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./05-re-exports-and-api-design-basics/" role="button">05-Re-Exports-And-Api-Design-Basics</a>
+
 
       </div>
     </div>
