--- a/rust/06-intermediate-rust/01-ownership_and_lifetimes/index.html
+++ b/rust/06-intermediate-rust/01-ownership_and_lifetimes/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust</title>
+  <title>Flashcards - Rust - 06-Intermediate-Rust - 01-Ownership And Lifetimes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,17 +16,7 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_conceptual_foundations/" role="button">01 Conceptual Foundations</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./02_programming_fundamentals/" role="button">02 Programming Fundamentals</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./03_ownership_and_memory/" role="button">03 Ownership And Memory</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04_practical_programming/" role="button">04 Practical Programming</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./05_code_organization/" role="button">05 Code Organization</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./06-intermediate-rust/" role="button">06-Intermediate-Rust</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-lifetime-annotations/" role="button">01-Lifetime-Annotations</a>
 
 
       </div>
