--- a/rust/06-intermediate-rust/01-ownership_and_lifetimes/index.html
+++ b/rust/06-intermediate-rust/01-ownership_and_lifetimes/index.html
@@ -18,6 +18,12 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01-lifetime-annotations/" role="button">01-Lifetime-Annotations</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02-common-lifetime-patterns/" role="button">02-Common-Lifetime-Patterns</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03-lifetime-elision/" role="button">03-Lifetime-Elision</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./04-lifetime-bounds-in-structs/" role="button">04-Lifetime-Bounds-In-Structs</a>
+
 
       </div>
     </div>
