--- a/git/03_branching/index.html
+++ b/git/03_branching/index.html
@@ -22,6 +22,14 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./03_merging/" role="button">03 Merging</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./04-fast-forward-vs-three-way/" role="button">04-Fast-Forward-Vs-Three-Way</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./05-resolve-merge-conflicts/" role="button">05-Resolve-Merge-Conflicts</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./06-basic-rebasing/" role="button">06-Basic-Rebasing</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./07-deleting-branches/" role="button">07-Deleting-Branches</a>
+
 
       </div>
     </div>
