--- a/linux/02_users_and_groups/index.html
+++ b/linux/02_users_and_groups/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01_user_accounts/" role="button">01 User Accounts</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02-group-accounts/" role="button">02-Group-Accounts</a>
+
 
       </div>
     </div>
