--- a/sql/04-aggregation/index.html
+++ b/sql/04-aggregation/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - SQL</title>
+  <title>Flashcards - SQL - 04-Aggregation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,13 +16,9 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01_foundation/" role="button">01 Foundation</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-aggregate-functions/" role="button">01-Aggregate-Functions</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02_reading_data/" role="button">02 Reading Data</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./03_relationships/" role="button">03 Relationships</a>
-
-<a class="btn btn-outline-light ms-3 me-3" href="./04-aggregation/" role="button">04-Aggregation</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02-group-by-mechanics/" role="button">02-Group-By-Mechanics</a>
 
 
       </div>
