--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>Flashcards - Rust - 06-Intermediate-Rust</title>
+  <title>Flashcards - Rust - 06-Intermediate-Rust - 02-Traits-And-Generics</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -16,9 +16,11 @@
       <div class="d-grid gap-2 col-12 mx-auto">
         
 
-<a class="btn btn-outline-light ms-3 me-3" href="./01-ownership_and_lifetimes/" role="button">01-Ownership And Lifetimes</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./01-traits/" role="button">01-Traits</a>
 
-<a class="btn btn-outline-light ms-3 me-3" href="./02-traits-and-generics/" role="button">02-Traits-And-Generics</a>
+<a class="btn btn-outline-light ms-3 me-3" href="./02-trait-implementations/" role="button">02-Trait-Implementations</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03-derived-traits/" role="button">03-Derived-Traits</a>
 
 
       </div>
