--- a/sql/04-aggregation/index.html
+++ b/sql/04-aggregation/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02-group-by-mechanics/" role="button">02-Group-By-Mechanics</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03-having-vs-where/" role="button">03-Having-Vs-Where</a>
+
 
       </div>
     </div>
