--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -22,6 +22,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./03-derived-traits/" role="button">03-Derived-Traits</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./04-trait-bounds/" role="button">04-Trait-Bounds</a>
+
 
       </div>
     </div>
