--- a/linux/02_users_and_groups/index.html
+++ b/linux/02_users_and_groups/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02-group-accounts/" role="button">02-Group-Accounts</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03-user-configurations/" role="button">03-User-Configurations</a>
+
 
       </div>
     </div>
