--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -26,6 +26,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./05-generic-types/" role="button">05-Generic-Types</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./06-generic-implementations/" role="button">06-Generic-Implementations</a>
+
 
       </div>
     </div>
