--- a/rust/06-intermediate-rust/02-traits-and-generics/index.html
+++ b/rust/06-intermediate-rust/02-traits-and-generics/index.html
@@ -28,6 +28,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./06-generic-implementations/" role="button">06-Generic-Implementations</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./07-trait-objects-part-1/" role="button">07-Trait-Objects-Part-1</a>
+
 
       </div>
     </div>
