--- a/rust/06-intermediate-rust/03-iterators-and-closures/index.html
+++ b/rust/06-intermediate-rust/03-iterators-and-closures/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02-iterator-trait/" role="button">02-Iterator-Trait</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03-iterator-adapters/" role="button">03-Iterator-Adapters</a>
+
 
       </div>
     </div>
