--- a/rust/06-intermediate-rust/03-iterators-and-closures/index.html
+++ b/rust/06-intermediate-rust/03-iterators-and-closures/index.html
@@ -22,6 +22,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./03-iterator-adapters/" role="button">03-Iterator-Adapters</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./04-iterator-consumers/" role="button">04-Iterator-Consumers</a>
+
 
       </div>
     </div>
