--- a/rust/06-intermediate-rust/03-iterators-and-closures/index.html
+++ b/rust/06-intermediate-rust/03-iterators-and-closures/index.html
@@ -24,6 +24,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./04-iterator-consumers/" role="button">04-Iterator-Consumers</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./05-custom-iterators/" role="button">05-Custom-Iterators</a>
+
 
       </div>
     </div>
