--- a/sql/05-advanced-selection/index.html
+++ b/sql/05-advanced-selection/index.html
@@ -18,6 +18,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01-subquery-concepts/" role="button">01-Subquery-Concepts</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02-common-table-expressions/" role="button">02-Common-Table-Expressions</a>
+
 
       </div>
     </div>
