--- a/git/04-remotes-and-collaboration/index.html
+++ b/git/04-remotes-and-collaboration/index.html
@@ -18,6 +18,10 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./01-cloning-repos/" role="button">01-Cloning-Repos</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./02-connect-to-remotes/" role="button">02-Connect-To-Remotes</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./03-fetch-vs-pull/" role="button">03-Fetch-Vs-Pull</a>
+
 
       </div>
     </div>
