--- a/sql/05-advanced-selection/index.html
+++ b/sql/05-advanced-selection/index.html
@@ -20,6 +20,8 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./02-common-table-expressions/" role="button">02-Common-Table-Expressions</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./03-set-operations/" role="button">03-Set-Operations</a>
+
 
       </div>
     </div>
