--- a/rust/06-intermediate-rust/04-smart-pointers/index.html
+++ b/rust/06-intermediate-rust/04-smart-pointers/index.html
@@ -22,6 +22,12 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./03-box/" role="button">03-Box</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./04-rc/" role="button">04-Rc</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./05-arc/" role="button">05-Arc</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./06-refcell/" role="button">06-Refcell</a>
+
 
       </div>
     </div>
