--- a/rust/06-intermediate-rust/04-smart-pointers/index.html
+++ b/rust/06-intermediate-rust/04-smart-pointers/index.html
@@ -28,6 +28,10 @@
 
 <a class="btn btn-outline-light ms-3 me-3" href="./06-refcell/" role="button">06-Refcell</a>
 
+<a class="btn btn-outline-light ms-3 me-3" href="./07-combinations-and-patterns/" role="button">07-Combinations-And-Patterns</a>
+
+<a class="btn btn-outline-light ms-3 me-3" href="./08-trade-offs-and-common-pitfalls/" role="button">08-Trade-Offs-And-Common-Pitfalls</a>
+
 
       </div>
     </div>
